--- a/ICT311Task2ByKim_Donghyun_1098130/app/src/main/res/layout/fragment_crime.xml
+++ b/ICT311Task2ByKim_Donghyun_1098130/app/src/main/res/layout/fragment_crime.xml
@@ -22,6 +22,14 @@
         android:hint="@string/Title" />
 
     <EditText
+        android:id="@+id/comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:hint="@string/Comment" />
+
+    <EditText
         android:id="@+id/ShopName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
